Update 'hxpj9b47a-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:0cec3e175296d6e05b9d6958209c8909b41f55c7@sha256:0ed146f8f1e2c933a4aaf54271ed2416d9a7bc9f9618944910a1b3b931910419

--- a/components/hxpj9b47a-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/hxpj9b47a-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hxpj9b47a-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:0cec3e175296d6e05b9d6958209c8909b41f55c7@sha256:0ed146f8f1e2c933a4aaf54271ed2416d9a7bc9f9618944910a1b3b931910419
+          name: container-image
